# tg_task_manager

./: .env.example  .gitignore  BUGS.md  CHANGELOG.md  CLAUDE.md  HANDOFF.md  pyproject.toml
.claude/skills/tg-task-manager/: SKILL.md
CLAUDE-KIT/: INSTALL.md  START-HERE.md
CLAUDE-KIT/global/: CLAUDE.md  MEMORY.md
CLAUDE-KIT/global/memory/: feedback_confirm_before_changes.md  user_identity.md  user_language.md
CLAUDE-KIT/templates/: CLAUDE.project.md  SKILL.md  project_NAME.md
app/: config.py
app/api/: main.py
app/bot/: main.py
app/db/: models.py  session.py
app/scheduler/: jobs.py
docs/: PROJECT_STATE.md
