[project]
name = "tg-task-manager"
version = "0.1.0"
description = "Telegram + Gemini AI задачі -> Vikunja"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "aiogram>=3.13",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "pydantic-settings>=2.5",
    "apscheduler>=3.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
